--- a/CSS/Summar_flower.css
+++ b/CSS/Summar_flower.css
@@ -1056,10 +1056,10 @@ span{
   font-size: 38px;
 }
 .parents_6 {
-    display: flex;
-   justify-content: center;
-   align-items: center;
-   overflow: scroll;
+    display: flex !important;
+   justify-content: center !important;
+   align-items: center !important;
+   overflow: scroll !important;
 
     gap: 10px;
     margin: 30px 20px;
@@ -1202,8 +1202,10 @@ li,.footer_text{
   font-size: 38px;
 }
 .parents_6 {
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
+   display: flex !important;
+   justify-content: center !important;
+   align-items: center !important;
+   overflow: scroll !important;
     gap: 10px;
     margin: 30px 20px;
     flex-wrap: wrap;
