--- a/CSS/Local_shop.css
+++ b/CSS/Local_shop.css
@@ -1198,8 +1198,10 @@ li,.footer_text{
   font-size: 38px;
 }
 .parents_6 {
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
+    display: flex !important;
+   justify-content: center !important;
+   align-items: center !important;
+   overflow: scroll !important;
     gap: 10px;
     margin: 30px 20px;
     flex-wrap: wrap;
