--- a/CSS/Modern_flower.css
+++ b/CSS/Modern_flower.css
@@ -1054,8 +1054,10 @@ span{
   font-size: 38px;
 }
 .parents_6 {
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
+ display: flex !important;
+   justify-content: center !important;
+   align-items: center !important;
+   overflow: scroll !important;
     gap: 10px;
     margin: 30px 20px;
     flex-wrap: wrap;
