--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1306,7 +1306,25 @@ li:hover{
       width: 300px;
       height: 270px;
     }
+    .nav_1 {
+    display: flex
+;
+    justify-content: end;
+    gap: 90px;
+}
 
+.Flowerimg-1 {
+    display: flex;
+    justify-content: center;
+    padding: 16px 80px;
+    border: 1px solid #fffcf9;
+    background-color: #fffcf9;
+    gap: 20px;
+    font-size: 14px;
+    height: 50px;
+    font-family: Arial, sans-serif;
+    font-weight: 800;
+}
     .summer_img{
     gap:0px;
     margin: 20px 0px;
@@ -1455,7 +1473,7 @@ li:hover{
  }
 
  .proflowers-logo-1{
-  width: 300px;
+  width: 320px;
  }
  .footer_text{
   font-size: 20px;
