--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1473,7 +1473,8 @@ li:hover{
  }
 
  .proflowers-logo-1{
-  width: 320px;
+  width: 340px;
+   margin: 15px 0px;
  }
  .footer_text{
   font-size: 20px;
