--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1314,6 +1314,13 @@ li:hover{
     padding: 25px 100px;
    
 }
+ .proflowers-logo-1{
+  width: 340px;
+   margin: 15px 0px;
+ }
+
+
+
     .summer_img{
     gap:0px;
     margin: 20px 0px;
