--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1314,9 +1314,11 @@ li:hover{
     padding: 25px 100px;
    
 }
-
-
-
+.Flowerimg {
+    width: 247px;
+    height: 50px;
+    margin: 15px 0px;
+}
 
     .summer_img{
     gap:0px;
